--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -880,7 +880,7 @@
     <div class="container">
         <div class="heading heading-flex mb-2 mb-lg-3">
             <div class="heading-left">
-                <h2 class="title mb-0">Games Coming Soon</h2><!-- End .title -->
+                <h2 class="title mb-0">Special Offers</h2><!-- End .title -->
             </div><!-- End .heading-left -->
 
             <div class="heading-right">
