--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -10,7 +10,7 @@
 <div layout:fragment="content">
     <div class="wrap-container">
         <main class="main">
-            <div class="page-header text-center" style="background-image: url('images/page-header-bg.jpg')">
+            <div class="page-header text-center" th:style="'background-image: url('images/page-header-bg.jpg')'">
                 <div class="container">
                     <h1 class="page-title">Products<span>Shop</span></h1>
                 </div><!-- End .container -->
