--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -40,9 +40,8 @@
                                 <span class="sr-only">Toggle mobile menu</span>
                                 <i class="icon-bars"></i>
                             </button>
-
                             <a href="/index" class="logo">
-                                <img src="" alt="LPD Logo" width="105" height="25">
+                                <img src="images/Logo.png" alt="LPD Logo" width="150" height="50">
                             </a>
                         </div><!-- End .header-left -->
 
@@ -157,11 +156,10 @@
                                         <a href="/index" > <i class="las la-home"></i> Home</a>
                                     </li>
                                     <li>
-                                        <a href="category.html">Shop</a>
+                                        <a href="#">Shop</a>
                                     </li>
                                     <li>
-                                        <a href="product.html" >Product</a>
-
+                                        <a href="/products" >Product</a>
                                         <div class="megamenu megamenu-sm">
                                             <div class="row no-gutters">
                                                 <div class="col-md-6">
@@ -190,38 +188,9 @@
                                     </li>
                                     <li>
                                         <a href="#" >Brand</a>
-                                        <ul>
-                                            <li>
-                                                <a href="about.html" class="sf-with-ul">About</a>
-                                                <ul>
-                                                    <li><a href="about.html">About 01</a></li>
-                                                    <li><a href="about-2.html">About 02</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li>
                                         <a href="blog.html" >News</a>
-
-                                        <ul>
-                                            <li><a href="blog.html">Classic</a></li>
-                                            <li><a href="blog-listing.html">Listing</a></li>
-                                            <li>
-                                                <a href="#">Mask</a>
-                                                <ul>
-                                                    <li><a href="blog-mask-grid.html">Blog mask grid</a></li>
-                                                    <li><a href="blog-mask-masonry.html">Blog mask masonry</a></li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <a href="#">Single Post</a>
-                                                <ul>
-                                                    <li><a href="single.html">Default with sidebar</a></li>
-                                                    <li><a href="single-fullwidth.html">Fullwidth no sidebar</a></li>
-                                                    <li><a href="single-fullwidth-sidebar.html">Fullwidth with sidebar</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li>
                                         <a href="/about" >About Us</a>
