--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -10,7 +10,7 @@
 <div layout:fragment="content">
     <div class="wrap-container">
         <main class="main">
-            <div class="page-header text-center" th:style="'background-image: url('images/page-header-bg.jpg')'">
+            <div class="page-header text-center">
                 <div class="container">
                     <h1 class="page-title">Products<span>Shop</span></h1>
                 </div><!-- End .container -->
@@ -632,62 +632,6 @@
                                                         <label class="custom-control-label" for="cat-8">Sportwear</label>
                                                     </div><!-- End .custom-checkbox -->
                                                     <span class="item-count">0</span>
-                                                </div><!-- End .filter-item -->
-                                            </div><!-- End .filter-items -->
-                                        </div><!-- End .widget-body -->
-                                    </div><!-- End .collapse -->
-                                </div><!-- End .widget -->
-
-                                <div class="widget widget-collapsible">
-                                    <h3 class="widget-title">
-                                        <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="true" aria-controls="widget-2">
-                                            Size
-                                        </a>
-                                    </h3><!-- End .widget-title -->
-
-                                    <div class="collapse show" id="widget-2">
-                                        <div class="widget-body">
-                                            <div class="filter-items">
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="size-1">
-                                                        <label class="custom-control-label" for="size-1">XS</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="size-2">
-                                                        <label class="custom-control-label" for="size-2">S</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" checked="" id="size-3">
-                                                        <label class="custom-control-label" for="size-3">M</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" checked="" id="size-4">
-                                                        <label class="custom-control-label" for="size-4">L</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="size-5">
-                                                        <label class="custom-control-label" for="size-5">XL</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                </div><!-- End .filter-item -->
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" id="size-6">
-                                                        <label class="custom-control-label" for="size-6">XXL</label>
-                                                    </div><!-- End .custom-checkbox -->
                                                 </div><!-- End .filter-item -->
                                             </div><!-- End .filter-items -->
                                         </div><!-- End .widget-body -->
