--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -8,7 +8,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="widget widget-about">
-                                <img src="" class="footer-logo" alt="Footer Logo" width="105" height="25">
+                                <img src="images/Logo.png" class="footer-logo" alt="Footer Logo" width="150" height="50">
                                 <p>Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
                                 <div class="social-icons">
                                     <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="lab la-facebook-f"></i></a>
