--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -40,7 +40,7 @@
     <script th:src="@{js/superfish.min.js}"></script>
     <script th:src="@{js/owl.carousel.min.js}" type="text/javascript"></script>
     <script th:src="@{js/bootstrap-input-spinner.js}"></script>
-    <script th:src="@{js/jquery.magnific-popup.min.js}"></script>
+<!--    <script th:src="@{js/jquery.magnific-popup.min.js}"></script>-->
     <script th:src="@{js/jquery.elevateZoom.min.js}"></script>
 
     <!-- Main JS File -->
