--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -356,6 +356,7 @@ body {
 }
 
 .btn-wishlist:hover:before, .btn-wishlist:focus:before {
+    font-family: 'LineAwesome';
     content: '\f233'
 }
 
