--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,7 @@
 ﻿@import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800");
 
 *{
-   font-family: "Line Awesome Free";
+   font-family: "LineAwesome";
 }
 
 html {
@@ -7501,7 +7501,7 @@ p {
 }
 
 .btn-product-icon:before {
-    font-family: "Poppins"
+    font-family: "LineAwesome"
 }
 
 .btn-product-icon span {
@@ -10963,6 +10963,7 @@ button:focus {
 }
 
 .quickView-content .btn-wishlist:before {
+    font-family: 'LineAwesome';
     content: '\f234'
 }
 
