--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -190,7 +190,7 @@
                                         <a href="#" >Brand</a>
                                     </li>
                                     <li>
-                                        <a href="blog.html" >News</a>
+                                        <a href="/news" >News</a>
                                     </li>
                                     <li>
                                         <a href="/about" >About Us</a>
