--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -65,7 +65,7 @@
 
                             <div class="tab-pane fade" id="tab-downloads" role="tabpanel" aria-labelledby="tab-downloads-link">
                                 <p>No products available yet.</p>
-                                <a href="category.html" class="btn btn-outline-primary-2"><span>Create Product</span><i class="las la-long-arrow-alt-right"></i></a>
+                                <a href="/create_product" class="btn btn-outline-primary-2"><span>Create Product</span><i class="las la-long-arrow-alt-right"></i></a>
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="tab-address" role="tabpanel" aria-labelledby="tab-address-link">
