--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -103,7 +103,7 @@
 
                                                 <figure class="product-image-container">
                                                     <a href="product.html" class="product-image">
-                                                        <img src="assets/images/products/cart/product-1.jpg" alt="product">
+                                                        <img src="images/index/products/product-5.jpg" alt="product">
                                                     </a>
                                                 </figure>
                                                 <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
@@ -123,7 +123,7 @@
 
                                                 <figure class="product-image-container">
                                                     <a href="product.html" class="product-image">
-                                                        <img src="assets/images/products/cart/product-2.jpg" alt="product">
+                                                        <img src="images/index/products/product-5.jpg" alt="product">
                                                     </a>
                                                 </figure>
                                                 <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
@@ -159,7 +159,7 @@
                                         <a href="#">Shop</a>
                                     </li>
                                     <li>
-                                        <a href="/products" >Product</a>
+                                        <a href="/products" class="sf-with-ul" >Product</a>
                                         <div class="megamenu megamenu-sm">
                                             <div class="row no-gutters">
                                                 <div class="col-md-6">
@@ -170,18 +170,6 @@
                                                             <li><a href="/products">List By Seller</a></li>
                                                         </ul>
                                                     </div><!-- End .menu-col -->
-                                                </div><!-- End .col-md-6 -->
-
-                                                <div class="col-md-6">
-                                                    <div class="banner banner-overlay">
-                                                        <a href="category.html">
-                                                            <img src="assets/images/menu/banner-2.jpg" alt="Banner">
-
-                                                            <div class="banner-content banner-content-bottom">
-                                                                <div class="banner-title text-white">New Trends<br><span><strong>spring 2019</strong></span></div><!-- End .banner-title -->
-                                                            </div><!-- End .banner-content -->
-                                                        </a>
-                                                    </div><!-- End .banner -->
                                                 </div><!-- End .col-md-6 -->
                                             </div><!-- End .row -->
                                         </div><!-- End .megamenu megamenu-sm -->
