--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,5 @@
 ﻿@import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800");
 
-*{
-   font-family: "LineAwesome";
-}
 
 html {
     font-size: 62.5%;
@@ -781,6 +778,19 @@ blockquote.text-white cite span {
 
 .header-middle .menu.sf-arrows > li > .sf-with-ul {
     padding-right: 1.5rem
+}
+
+
+.menu.sf-arrows .sf-with-ul::after {
+    font-family: 'LineAwesome';
+    content: '\f110';
+    position: absolute;
+    right: 0;
+    top: 50%;
+    display: block;
+    font-size: 1rem;
+    line-height: 1;
+    margin-top: -.5rem;
 }
 
 .cart-dropdown, .compare-dropdown {
