--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -884,7 +884,7 @@
             </div><!-- End .heading-left -->
 
             <div class="heading-right">
-                <a href="category.html" class="title-link">View more products <i class="bi bi-arrow-right"></i></a>
+                <a href="/products" class="title-link">View more products <i class="las la-arrow-right"></i></a>
             </div><!-- End .heading-right -->
         </div><!-- End .heading -->
 
