--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,8 +10,11 @@
             <h2>Registration</h2>
         </div>
         <div class="row clearfix">
-            <div class="">
-                <form>
+            <div>
+                <form action="/register" method="post">
+                    <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
+                        <input type="text" name="fullname" placeholder="Full Name" required />
+                    </div>
                     <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
                         <input type="email" name="email" placeholder="Email" required />
                     </div>
@@ -21,27 +24,7 @@
                     <div class="input_field"> <span><i aria-hidden="true" class="fa fa-lock"></i></span>
                         <input type="password" name="password" placeholder="Re-type Password" required />
                     </div>
-                    <div class="row clearfix">
-                        <div class="col_half">
-                            <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
-                                <input type="text" name="name" placeholder="First Name" />
-                            </div>
-                        </div>
-                        <div class="col_half">
-                            <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
-                                <input type="text" name="name" placeholder="Last Name" required />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input_field radio_option">
-                        <input type="radio" name="radiogroup1" id="rd1">
-                        <label for="rd1">Male</label>
-                        <input type="radio" name="radiogroup1" id="rd2">
-                        <label for="rd2">Female</label>
-                    </div>
-                    <div class="input_field select_option">
-                        <input type="text" name="name" placeholder="Country" />
-                    </div>
+
                     <div class="input_field checkbox_option">
                         <input type="checkbox" id="cb1">
                         <label for="cb1">I agree with terms and conditions</label>
