--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -81,11 +81,13 @@
                                             </h3><!-- End .product-title -->
                                         </div><!-- End .product -->
                                     </td>
-                                    <td class="price-col">$76.00</td>
+                                    <td class="price-col price" value="76">76.00</td>
                                     <td class="quantity-col">
-                                       5
+                                        <div class="cart-product-quantity">
+                                            <input id = "changedinput"   type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required>
+                                        </div><!-- End .cart-product-quantity -->
                                     </td>
-                                    <td class="total-col">$76.00</td>
+                                    <td class="total-col">76.00</td>
                                     <td class="remove-col">
                                         <button class="btn-remove"><i class="las la-times"></i></button>
                                     </td>
@@ -106,7 +108,7 @@
                                     </form>
                                 </div><!-- End .cart-discount -->
 
-                                <a href="#" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i
+                                <a href="#" class="btn btn-outline-dark-2 update-cart"><span>UPDATE CART</span><i
                                         class="icon-refresh"></i></a>
                             </div><!-- End .cart-bottom -->
                         </div><!-- End .col-lg-9 -->
