--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -46,7 +46,7 @@
 
                                     <div class="entry-content">
                                         <p th:text="${news.description}"></p>
-                                        <p th:text="${news.createdAt}"></p>
+                                        <p th:text="${news.updatedAt}"></p>
                                     </div><!-- End .entry-content -->
                                 </div><!-- End .entry-body -->
                             </div><!-- End .col-md-7 -->
