--- a/src/main/resources/templates/listnew.html
+++ b/src/main/resources/templates/listnew.html
@@ -3,7 +3,8 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/adminlayout/template_admin.html}">
 
-<body  layout:fragment="content">
+<body >
+<div class="main-panel" layout:fragment="content">
 <div class="content">
     <div class="container-fluid">
         <div class="row">
@@ -52,6 +53,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
 </body>
