--- a/src/main/resources/templates/updatenew.html
+++ b/src/main/resources/templates/updatenew.html
@@ -11,7 +11,8 @@
 
 </head>
 
-<body  layout:fragment="content">
+<body>
+<div class="main-panel" layout:fragment="content">
 <div class="content">
     <div class="container-fluid">
         <div class="row">
@@ -59,7 +60,7 @@
         </div>
     </div>
 </div>
-
+</div>
 </body>
 
 </html>
