--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -59,7 +59,9 @@
                                     </td>
                                     <td class="price-col">$84.00</td>
                                     <td class="quantity-col">
-                                        6
+                                        <div class="cart-product-quantity">
+                                            <input id = "changedinput"   type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required>
+                                        </div><!-- End .cart-product-quantity -->
                                     </td>
                                     <td class="total-col">$84.00</td>
                                     <td class="remove-col">
@@ -81,7 +83,7 @@
                                             </h3><!-- End .product-title -->
                                         </div><!-- End .product -->
                                     </td>
-                                    <td class="price-col price" value="76">76.00</td>
+                                    <td class="price-col" value="76" id="price-item">76.00</td>
                                     <td class="quantity-col">
                                         <div class="cart-product-quantity">
                                             <input id = "changedinput"   type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required>
