--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -25,7 +25,7 @@
                                                 </div><!-- End .header-menu -->
                                             </div>
                                         </li>
-                                        <li><a href="#signin-modal" data-toggle="modal">Sign in / Sign up</a></li>
+                                        <li><a href="/login">Sign in / Sign up</a></li>
                                     </ul>
                                 </li>
                             </ul><!-- End .top-menu -->
