--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
         <div class="title_container">
             <h2>Sign in</h2>
             <div class="text-center">
-                <span style="font-size: 10px;">New Here? <a href="#" style="font-size: 10px;text-decoration: none;" class="font-weight-bold">Create an Account</a></span>
+                <span style="font-size: 10px;">New Here? <a href="/register" style="font-size: 10px;text-decoration: none;" class="font-weight-bold">Create an Account</a></span>
             </div>
         </div>
         <div class="row clearfix">
