--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
@@ -11,18 +12,15 @@
         </div>
         <div class="row clearfix">
             <div>
-                <form action="/register" method="post">
+                <form action="/register" method="post" th:object="${user}">
                     <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
-                        <input type="text" name="fullname" placeholder="Full Name" required />
+                        <input th:field = "*{fullName}" type="text" name="fullname" placeholder="Full Name" required  />
                     </div>
                     <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
-                        <input type="email" name="email" placeholder="Email" required />
+                        <input th:field = "*{email}" type="email" name="email" placeholder="Email" required />
                     </div>
                     <div class="input_field"> <span><i aria-hidden="true" class="fa fa-lock"></i></span>
-                        <input type="password" name="password" placeholder="Password" required />
-                    </div>
-                    <div class="input_field"> <span><i aria-hidden="true" class="fa fa-lock"></i></span>
-                        <input type="password" name="password" placeholder="Re-type Password" required />
+                        <input th:field = "*{password}" type="password" name="password" placeholder="Password" required />
                     </div>
 
                     <div class="input_field checkbox_option">
