--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,4 +1,5 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+     >
 <head>
     <title>Login</title>
     <link rel="stylesheet" type="text/css" th:href="@{css/login_home.css}">
@@ -15,8 +16,9 @@
         <div class="row clearfix">
             <div class="">
                 <form name="f" method="POST" th:action="@{/login_security}">
+                    <div class="alert" th:if="${errorMessage}" th:text="${errorMessage}"></div>
                     <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
-                        <input type="text" name="username" placeholder="Username" required />
+                        <input type="text" name="username" placeholder="Username" required th:autofocus="true" />
                     </div>
                     <div class="input_field"> <span><i aria-hidden="true" class="fa fa-lock"></i></span>
                         <input type="password" name="password" placeholder="Password" required />
