--- a/src/main/resources/templates/list_user.html
+++ b/src/main/resources/templates/list_user.html
@@ -9,14 +9,17 @@
 <body>
 <div class="main-panel" layout:fragment="content">
 
+    <form method="post" th:action="@{/search}" class="navbar-form col-md-4" style="float: right; margin-top: 30px">
+        <div class="input-group no-border">
+            <input type="text" name="name" value="" class="form-control" placeholder="Search...">
+            <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                <i class="material-icons">search</i>
+                <div class="ripple-container"></div>
+            </button>
+        </div>
+    </form>
 
     <div class="content">
-        <form th:action="@{/list}">
-            Filter: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
-            &nbsp;
-            <input type="submit" value="Search" />
-        </form>
-
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
@@ -55,13 +58,6 @@
                                     </tr>
                                     </tbody>
                                 </table>
-                                <nav aria-label="Page navigation">
-                                    <ul class="pagination">
-                                        <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
-                                            <a class="page-link" th:href="@{/list(size=${size}, page=${t})}" th:text="${t+1}"></a>
-                                        </li>
-                                    </ul>
-                                </nav>
                             </div>
                         </div>
                     </div>
