--- a/src/main/resources/templates/updaterole.html
+++ b/src/main/resources/templates/updaterole.html
@@ -15,7 +15,7 @@
                         <h4 class="card-title">Update Product</h4>
                     </div>
                     <div class="card-body">
-                        <form method="post" th:action="@{/update}" th:object="${role}">
+                        <form method="post" action="/updateRole" th:object="${role}">
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
