--- a/src/main/resources/templates/layout/adminlayout/sidebar.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar.html
@@ -30,7 +30,13 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="./tables.html">
+                <a class="nav-link" href="/createProductUser">
+                    <i class="material-icons">person</i>
+                    <p>Product User</p>
+                </a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="/listProductUser">
                     <i class="material-icons">content_paste</i>
                     <p>Table List</p>
                 </a>
