--- a/src/main/resources/templates/listrole.html
+++ b/src/main/resources/templates/listrole.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/adminlayout/template_admin.html}">
 <head>
     <title>
-        list
+        List Role
     </title>
-
 </head>
 <body>
+<div class="main-panel" layout:fragment="content">
 <div class="content">
     <div class="container-fluid">
         <div class="row">
@@ -26,9 +28,9 @@
                                 </thead>
                                 <tbody>
                                 <tr th:each="role : ${roles}">
-                                    <th scope="row" th:text="${role.id}"></th>
+                                    <th scope="row" th:text="${role.roleid}"></th>
                                     <td th:text="${role.name}"></td>
-                                    <td><a th:href="@{/update(id=${role.id})}" th:text="Edit"></a></td>
+                                    <td><a th:href="@{/updaterole(id=${role.roleid})}" th:text="Edit"></a></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -45,6 +47,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 </body>
 
