--- a/src/main/resources/templates/layout/adminlayout/sidebar.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar.html
@@ -24,33 +24,33 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="./user.html">
+                <a class="nav-link" href="/list">
                     <i class="material-icons">person</i>
-                    <p>User Profile</p>
+                    <p>User</p>
                 </a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="./tables.html">
                     <i class="material-icons">content_paste</i>
-                    <p>Table List</p>
+                    <p>Product</p>
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="./typography.html">
+                <a class="nav-link" href="/listRole">
                     <i class="material-icons">library_books</i>
-                    <p>Typography</p>
+                    <p>News</p>
                 </a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="./icons.html">
                     <i class="material-icons">bubble_chart</i>
-                    <p>Icons</p>
+                    <p>Shipper</p>
                 </a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="./map.html">
                     <i class="material-icons">location_ons</i>
-                    <p>Maps</p>
+                    <p>Order</p>
                 </a>
             </li>
             <li class="nav-item ">
@@ -62,7 +62,7 @@
             <li class="nav-item ">
                 <a class="nav-link" href="./rtl.html">
                     <i class="material-icons">language</i>
-                    <p>RTL Support</p>
+                    <p>Support</p>
                 </a>
             </li>
         </ul>
