--- a/src/main/resources/templates/layout/adminlayout/sidebar.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar.html
@@ -25,13 +25,13 @@
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="/list">
-                    <i class="material-icons">person</i>
+                    <i class="material-icons">manage_accounts</i>
                     <p>User</p>
                 </a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="./tables.html">
-                    <i class="material-icons">content_paste</i>
+                    <i class="material-icons">inventory_2</i>
                     <p>Product</p>
                 </a>
             </li>
@@ -43,13 +43,13 @@
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="./icons.html">
-                    <i class="material-icons">bubble_chart</i>
+                    <i class="material-icons">local_shipping</i>
                     <p>Shipper</p>
                 </a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="./map.html">
-                    <i class="material-icons">location_ons</i>
+                    <i class="material-icons">receipt</i>
                     <p>Order</p>
                 </a>
             </li>
